crates/csskit_derives/src/test/snapshots/csskit_derives__test__test_to_cursors__to_cursors_enum_mixed_variants.snap
---
source: crates/csskit_derives/src/test/test_to_cursors.rs
expression: pretty
---
#[automatically_derived]
impl ::css_parse::ToCursors for BorderStyle {
    fn to_cursors(&self, s: &mut impl ::css_parse::CursorSink) {
        match self {
            Self::Solid => {}
            Self::Dashed { width, .. } => {
                ::css_parse::ToCursors::to_cursors(width, s);
            }
            Self::Dotted { radius, spacing, .. } => {
                ::css_parse::ToCursors::to_cursors(radius, s);
                ::css_parse::ToCursors::to_cursors(spacing, s);
            }
        }
    }
}
