crates/csskit_derives/src/test/snapshots/csskit_derives__test__test_to_cursors__to_cursors_enum_single_field_variants.snap
---
source: crates/csskit_derives/src/test/test_to_cursors.rs
expression: pretty
---
#[automatically_derived]
impl ::css_parse::ToCursors for Display {
    fn to_cursors(&self, s: &mut impl ::css_parse::CursorSink) {
        match self {
            Self::Block(v0) => {
                ::css_parse::ToCursors::to_cursors(v0, s);
            }
            Self::Inline(v0) => {
                ::css_parse::ToCursors::to_cursors(v0, s);
            }
            Self::None(v0) => {
                ::css_parse::ToCursors::to_cursors(v0, s);
            }
        }
    }
}
