crates/csskit_derives/src/test/snapshots/csskit_derives__test__test_to_cursors__to_cursors_enum_with_lifetime.snap
---
source: crates/csskit_derives/src/test/test_to_cursors.rs
expression: pretty
---
#[automatically_derived]
impl<'a> ::css_parse::ToCursors for CssValue<'a> {
    fn to_cursors(&self, s: &mut impl ::css_parse::CursorSink) {
        match self {
            Self::Keyword(v0) => {
                ::css_parse::ToCursors::to_cursors(v0, s);
            }
            Self::Function { name, args, .. } => {
                ::css_parse::ToCursors::to_cursors(name, s);
                ::css_parse::ToCursors::to_cursors(args, s);
            }
        }
    }
}
