crates/csskit_derives/src/test/snapshots/csskit_derives__test__test_to_cursors__to_cursors_named_struct.snap
---
source: crates/csskit_derives/src/test/test_to_cursors.rs
expression: pretty
---
#[automatically_derived]
impl ::css_parse::ToCursors for Color {
    fn to_cursors(&self, s: &mut impl ::css_parse::CursorSink) {
        match self {
            Self { red, green, blue, .. } => {
                ::css_parse::ToCursors::to_cursors(red, s);
                ::css_parse::ToCursors::to_cursors(green, s);
                ::css_parse::ToCursors::to_cursors(blue, s);
            }
        }
    }
}
