crates/csskit_derives/src/test/snapshots/csskit_derives__test__test_to_cursors__to_cursors_named_struct_with_lifetime.snap
---
source: crates/csskit_derives/src/test/test_to_cursors.rs
expression: pretty
---
#[automatically_derived]
impl<'a> ::css_parse::ToCursors for Value<'a> {
    fn to_cursors(&self, s: &mut impl ::css_parse::CursorSink) {
        match self {
            Self { content, unit, .. } => {
                ::css_parse::ToCursors::to_cursors(content, s);
                ::css_parse::ToCursors::to_cursors(unit, s);
            }
        }
    }
}
