crates/csskit_derives/src/test/snapshots/csskit_derives__test__test_to_cursors__to_cursors_tuple_struct_multiple_fields.snap
---
source: crates/csskit_derives/src/test/test_to_cursors.rs
expression: pretty
---
#[automatically_derived]
impl ::css_parse::ToCursors for Position {
    fn to_cursors(&self, s: &mut impl ::css_parse::CursorSink) {
        match self {
            Self(v0, v1, v2) => {
                ::css_parse::ToCursors::to_cursors(v0, s);
                ::css_parse::ToCursors::to_cursors(v1, s);
                ::css_parse::ToCursors::to_cursors(v2, s);
            }
        }
    }
}
