crates/csskit_derives/src/test/snapshots/csskit_derives__test__test_to_cursors__to_cursors_tuple_struct_single_field.snap
---
source: crates/csskit_derives/src/test/test_to_cursors.rs
expression: pretty
---
#[automatically_derived]
impl ::css_parse::ToCursors for Length {
    fn to_cursors(&self, s: &mut impl ::css_parse::CursorSink) {
        match self {
            Self(v0) => {
                ::css_parse::ToCursors::to_cursors(v0, s);
            }
        }
    }
}
